existing files check out of create_entry method

--- a/cli/gribber/gribscan_test.ipynb
+++ b/cli/gribber/gribscan_test.ipynb
@@ -50,24 +50,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gribber class:\n",
-      "  model: model name (default: IFS)\n",
-      "  exp: experiment name (default: tco1279-orca025)\n",
-      "  source: source name (default: ICMGG_atm2d)\n",
-      "  nprocs: number of processors (default: 4)\n",
-      "  verbose: print help message (default: True)\n",
-      "  dir: dictionary with directories (default: see below)\n",
-      "  datadir: data directory (default: /scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2)\n",
-      "  tmpdir: temporary directory (default: /scratch/b/b382289/gribscan)\n",
-      "  jsondir: JSON directory (default: /work/bb1153/b382289/gribscan-json)\n",
-      "  catalogdir: catalog directory (default: /work/bb1153/b382289/AQUA/config/levante/catalog)\n",
-      "  griblist: dictionary with GRIB files (default: see gribber.yml)\n",
-      "  tgt_json: target JSON file (default: see gribber.yml)\n",
-      "  catalogfile: catalog file (default: see gribber.yml)\n",
-      "  jsonfile: JSON file (default: see gribber.yml)\n",
+      "Data directory: /scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2\n",
+      "JSON directory: /work/bb1153/b382289/gribscan-json/tco1279-orca025\n",
+      "Catalog directory: /work/bb1153/b382289/AQUA/config/levante/catalog\n",
+      "Gribfile wildcard: ICMGG????+*\n",
+      "Catalog file: /work/bb1153/b382289/AQUA/config/levante/catalog/IFS/tco1279-orca025.yaml\n",
+      "JSON file: /work/bb1153/b382289/gribscan-json/tco1279-orca025/atm2d.json\n",
+      "Checking if indices already exist...\n",
+      "Indices already exist.\n",
+      "Checking if JSON file already exists...\n",
+      "JSON file already exists.\n",
+      "Catalog file /work/bb1153/b382289/AQUA/config/levante/catalog/IFS/tco1279-orca025.yaml already exists.\n"
+     ]
+    }
+   ],
+   "source": [
+    "mygrib = Gribber(verbose=True)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Initializing the `class` does not immediately scan the data directory, but only creates the `Gribber` object.\n",
+    "The method `create_entry` scans the data directory and creates the `.index` files and the `.json` file, then update the catalog `yaml` file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Creating /scratch/b/b382289/gribscan/tco1279-orca025...\n",
       "Creating /work/bb1153/b382289/gribscan-json/tco1279-orca025...\n",
-      "Gribfile wildcard: {self.gribfiles}\n",
       "Creating symlinks...\n",
       "Searching in...\n",
       "/scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2/ICMGG????+*\n",
@@ -84,13 +104,6 @@
       "File /scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2/ICMGGhr2n+000080 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
       "File /scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2/ICMGGhr2n+000000 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
       "File /scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2/ICMGGhr2n+000072 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
-      "Creating GRIB indices...\n",
-      "Indices already exist. Skipping...\n",
-      "None\n",
-      "Creating JSON file...\n",
-      "JSON file: /work/bb1153/b382289/gribscan-json/tco1279-orca025/atm2d.json\n",
-      "JSON file /work/bb1153/b382289/gribscan-json/tco1279-orca025/atm2d.json already exists. Skipping...\n",
-      "Catalog file: /work/bb1153/b382289/AQUA/config/levante/catalog/IFS/tco1279-orca025.yaml\n",
       "Block to be added to catalog file:\n",
       "{'driver': 'zarr', 'args': {'consolidated': False, 'urlpath': 'reference::/work/bb1153/b382289/gribscan-json/tco1279-orca025/atm2d.json'}}\n",
       "Source ICMGG_atm2d already exists in /work/bb1153/b382289/AQUA/config/levante/catalog/IFS/tco1279-orca025.yaml. Skipping...\n"
@@ -98,7 +111,7 @@
     }
    ],
    "source": [
-    "mygrib = Gribber(verbose=True)"
+    "mygrib.create_entry()"
    ]
   },
   {
@@ -108,6 +121,36 @@
    "source": [
     "Since for the example we used a subset of the original grib files, we need to specify the `replace` option to `False`, in order to not overwrite the already existing entry in the catalogue.\n",
     "However, since the folder in which `.index` and `.json` files are stored is different from the one in which the original grib files are stored, the first time that the `Gribber` class is called, they have been created."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "An internal method `_check_steps` is used to check if indices and json file have to be created or the step has already been processed.\n",
+    "Additionally the method `_check_json` checks if the catalog file has to be created."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checking if indices already exist...\n",
+      "Indices already exist.\n",
+      "Checking if JSON file already exists...\n",
+      "JSON file already exists.\n",
+      "Catalog file /work/bb1153/b382289/AQUA/config/levante/catalog/IFS/tco1279-orca025.yaml already exists.\n"
+     ]
+    }
+   ],
+   "source": [
+    "mygrib._check_steps()"
    ]
   }
  ],
