func in util.py, yaml workin, notebook update

--- a/cli/gribber/gribscan_test.ipynb
+++ b/cli/gribber/gribscan_test.ipynb
@@ -26,19 +26,17 @@
     "It also automatically updates the catalog `yaml` file.\n",
     "\n",
     "It takes as input:\n",
-    "- `model`: model name (default: `IFS`)\n",
-    "- `exp`: experiment name (default: `tco1279-orca025`)\n",
-    "- `source`: source name (default: `ICMGG_atm2d`)\n",
-    "- `nprocs`: number of processors (default: `4`)\n",
+    "- `model`: model name\n",
+    "- `exp`: experiment name\n",
+    "- `source`: source name\n",
+    "- `nprocs`: number of processors (default: `1`)\n",
     "- `dir`: dictionary with directories (defaults working on levante):\n",
     "    - `datadir`: data directory (default: `/scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2`)\n",
     "    - `tmpdir`: temporary directory (default: `/scratch/b/b382289/gribscan`)\n",
     "    - `jsondir`: JSON directory (default: `/work/bb1153/b382289/gribscan-json`)\n",
     "    - `catalogdir`: catalog directory (default: `/work/bb1153/b382289/AQUA/config/levante/catalog`)\n",
     "- `verbose`: print help message (default: `False`)\n",
-    "- `replace`: replace existing files (default: `False`)\n",
-    "\n",
-    "The directories can be also specified in a `yaml` file."
+    "- `replace`: replace existing files (default: `False`)"
    ]
   },
   {
@@ -50,6 +48,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Directory datadir is None. Using default directory:\n",
+      "/scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2\n",
+      "Directory tmpdir is None. Using default directory:\n",
+      "/scratch/b/b382289/gribscan\n",
+      "Directory jsondir is None. Using default directory:\n",
+      "/work/bb1153/b382289/gribscan-json\n",
+      "Directory catalogdir is None. Using default directory:\n",
+      "/work/bb1153/b382289/AQUA/config/levante/catalog\n",
       "Data directory: /scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2\n",
       "JSON directory: /work/bb1153/b382289/gribscan-json/tco1279-orca025\n",
       "Catalog directory: /work/bb1153/b382289/AQUA/config/levante/catalog\n",
@@ -60,12 +66,13 @@
       "Indices already exist.\n",
       "Checking if JSON file already exists...\n",
       "JSON file already exists.\n",
+      "Checking if catalog file already exists...\n",
       "Catalog file /work/bb1153/b382289/AQUA/config/levante/catalog/IFS/tco1279-orca025.yaml already exists.\n"
      ]
     }
    ],
    "source": [
-    "mygrib = Gribber(verbose=True)"
+    "mygrib = Gribber(model='IFS',exp='tco1279-orca025',source='ICMGG_atm2d',verbose=True)"
    ]
   },
   {
@@ -86,8 +93,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating /scratch/b/b382289/gribscan/tco1279-orca025...\n",
-      "Creating /work/bb1153/b382289/gribscan-json/tco1279-orca025...\n",
+      "Folder /scratch/b/b382289/gribscan/tco1279-orca025 already exists\n",
+      "Folder /work/bb1153/b382289/gribscan-json/tco1279-orca025 already exists\n",
       "Creating symlinks...\n",
       "Searching in...\n",
       "/scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2/ICMGG????+*\n",
@@ -124,6 +131,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The directories can be also specified in a `yaml` file, load them and then pass them to the class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data directory: /scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2\n",
+      "JSON directory: /work/bb1153/b382289/gribscan-json/tco1279-orca025\n",
+      "Catalog directory: /work/bb1153/b382289/AQUA/config/levante/catalog\n",
+      "Gribfile wildcard: ICMGG????+*\n",
+      "Catalog file: /work/bb1153/b382289/AQUA/config/levante/catalog/IFS/tco1279-orca025.yaml\n",
+      "JSON file: /work/bb1153/b382289/gribscan-json/tco1279-orca025/atm2d.json\n",
+      "Checking if indices already exist...\n",
+      "Indices already exist.\n",
+      "Checking if JSON file already exists...\n",
+      "JSON file already exists.\n",
+      "Checking if catalog file already exists...\n",
+      "Catalog file /work/bb1153/b382289/AQUA/config/levante/catalog/IFS/tco1279-orca025.yaml already exists.\n"
+     ]
+    }
+   ],
+   "source": [
+    "dir = load_yaml('gribber_setup_example.yaml')\n",
+    "\n",
+    "mygrib_yaml = Gribber(model='IFS',exp='tco1279-orca025',source='ICMGG_atm2d',dir=dir,verbose=True)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -145,6 +189,7 @@
       "Indices already exist.\n",
       "Checking if JSON file already exists...\n",
       "JSON file already exists.\n",
+      "Checking if catalog file already exists...\n",
       "Catalog file /work/bb1153/b382289/AQUA/config/levante/catalog/IFS/tco1279-orca025.yaml already exists.\n"
      ]
     }
