--- a/notebooks/gribber/gribber.ipynb
+++ b/notebooks/gribber/gribber.ipynb
@@ -13,8 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from aqua.gribber import Gribber\n",
-    "from aqua.util import load_yaml"
+    "from aqua.gribber import Gribber"
    ]
   },
   {
@@ -25,37 +24,52 @@
     "The `Gribber` class from the `aqua` framework checks the availability of grib files in a specified directory `datadir` for a specific experiment and creates `.index` files and a `.json` file.\n",
     "It also automatically updates the catalog `yaml` file.\n",
     "\n",
-    "It takes as input:\n",
+    "It takes as input, which as to specified in a configuration yaml file (please check the `gribber_setup_example.tmpl`):\n",
     "- `model`: model name\n",
     "- `exp`: experiment name\n",
     "- `source`: source name\n",
-    "- `nprocs`: number of processors (default: `1`)\n",
-    "- `dir`: dictionary with directories (defaults working on levante):\n",
-    "    - `datadir`: data directory (default: `/scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2`)\n",
-    "    - `tmpdir`: temporary directory (default: `/scratch/b/b382289/gribscan`)\n",
-    "    - `jsondir`: JSON directory (default: `/work/bb1153/b382289/gribscan-json`)\n",
-    "    - `catalogdir`: catalog directory (default: `/work/bb1153/b382289/AQUA/config/levante/catalog`)\n",
+    "- `dir`: dictionary with directories for disk operations:\n",
+    "    - `datadir`: data directory \n",
+    "    - `tmpdir`: temporary directory \n",
+    "    - `jsondir`: JSON directory \n",
+    "    - `catalogdir`: catalog directory\n",
     "- `verbose`: print help message (default: `False`)\n",
-    "- `replace`: replace existing files (default: `False`)"
+    "- `nprocs`: number of processors (default: `1`)\n",
+    "- `replace`: replace existing files (default: `False`)\n",
+    "\n",
+    "We start defining the default directories to work on Levante and then apply the class with a default IFS experiment"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "default_dir = {'datadir': '/scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2',\n",
+    "               'tmpdir': '/scratch/b/b382289/gribscan',\n",
+    "               'jsondir': '/work/bb1153/b382289/gribscan-json',\n",
+    "               'catalogdir': '/work/bb1153/b382289/AQUA/config/levante/catalog'}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Initializing the `class` does not immediately scan the data directory, but only creates the `Gribber` object.\n",
+    "The method `create_entry` scans the data directory and creates the `.index` files and the `.json` file, then update the catalog `yaml` file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Directory datadir is None. Using default directory:\n",
-      "/scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2\n",
-      "Directory tmpdir is None. Using default directory:\n",
-      "/scratch/b/b382289/gribscan\n",
-      "Directory jsondir is None. Using default directory:\n",
-      "/work/bb1153/b382289/gribscan-json\n",
-      "Directory catalogdir is None. Using default directory:\n",
-      "/work/bb1153/b382289/AQUA/config/levante/catalog\n",
       "Data directory: /scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2\n",
       "JSON directory: /work/bb1153/b382289/gribscan-json/tco1279-orca025\n",
       "Catalog directory: /work/bb1153/b382289/AQUA/config/levante/catalog\n",
@@ -72,7 +86,7 @@
     }
    ],
    "source": [
-    "mygrib = Gribber(model='IFS',exp='tco1279-orca025',source='ICMGG_atm2d',verbose=True)"
+    "mygrib = Gribber(model='IFS',exp='tco1279-orca025',source='ICMGG_atm2d', dir = default_dir, verbose=True)"
    ]
   },
   {
@@ -80,13 +94,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Initializing the `class` does not immediately scan the data directory, but only creates the `Gribber` object.\n",
-    "The method `create_entry` scans the data directory and creates the `.index` files and the `.json` file, then update the catalog `yaml` file."
+    "Then we can create the catalog entries, scanning with `gribscan` the entire GRIB archive by calling the `create_entry()` method"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -131,71 +144,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The directories can be also specified in a `yaml` file, load them and then pass them to the class."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data directory: /scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2\n",
-      "JSON directory: /work/bb1153/b382289/gribscan-json/tco1279-orca025\n",
-      "Catalog directory: /work/bb1153/b382289/AQUA/config/levante/catalog\n",
-      "Gribfile wildcard: ICMGG????+*\n",
-      "Catalog file: /work/bb1153/b382289/AQUA/config/levante/catalog/IFS/tco1279-orca025.yaml\n",
-      "JSON file: /work/bb1153/b382289/gribscan-json/tco1279-orca025/atm2d.json\n",
-      "Checking if indices already exist...\n",
-      "Indices already exist.\n",
-      "Checking if JSON file already exists...\n",
-      "JSON file already exists.\n",
-      "Checking if catalog file already exists...\n",
-      "Catalog file /work/bb1153/b382289/AQUA/config/levante/catalog/IFS/tco1279-orca025.yaml already exists.\n"
-     ]
-    }
-   ],
-   "source": [
-    "dir = load_yaml('gribber_setup_example.yaml')\n",
-    "\n",
-    "mygrib_yaml = Gribber(model='IFS',exp='tco1279-orca025',source='ICMGG_atm2d',dir=dir,verbose=True)"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "An internal method `_check_steps` is used to check if indices and json file have to be created or the step has already been processed.\n",
-    "Additionally the method `_check_json` checks if the catalog file has to be created."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Checking if indices already exist...\n",
-      "Indices already exist.\n",
-      "Checking if JSON file already exists...\n",
-      "JSON file already exists.\n",
-      "Checking if catalog file already exists...\n",
-      "Catalog file /work/bb1153/b382289/AQUA/config/levante/catalog/IFS/tco1279-orca025.yaml already exists.\n"
-     ]
-    }
-   ],
-   "source": [
-    "mygrib._check_steps()"
+    "In addition, the `Gribber` class can be used via a command line tool in `cli/gribber/cli_gribber.py`. This in an executable python script, which can be configured via a configuration yaml file (`--config configfile.yaml`), which must include the dictionary for the directories as well as the experiment details. A template for this configuration file can be found in `gribber_setup_example.tmpl`."
    ]
   }
  ],
