fix name of LRA generator for the notebook example

--- a/notebooks/lra_generator/lra_generator.ipynb
+++ b/notebooks/lra_generator/lra_generator.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from aqua.lra_generator import LRA_Generator\n",
+    "from aqua.lra_generator import LRAgenerator\n",
     "from aqua.reader import Reader"
    ]
   },
@@ -740,7 +740,7 @@
     }
    ],
    "source": [
-    "test = LRA_Generator(model=model,exp=exp,source=source,varlist=varlist,outdir=outdir,\n",
+    "test = LRAgenerator(model=model,exp=exp,source=source,varlist=varlist,outdir=outdir,\n",
     "                     resolution='r100',dry=True,verbose=True,fix=False)"
    ]
   },
@@ -826,7 +826,7 @@
   "kernelspec": {
    "display_name": "aqua",
    "language": "python",
-   "name": "python3"
+   "name": "aqua"
   },
   "language_info": {
    "codemirror_mode": {
@@ -839,9 +839,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.9"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
