--- a/notebooks/slurm/example_slurm_job.ipynb
+++ b/notebooks/slurm/example_slurm_job.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "    - [os, re]()\n",
     "\n",
-    "1. [Importing the slurm_job module](#1-import-the-slurm_job-module)\n",
+    "1. [Importing the job module](#1-importing-the-job-module)\n",
     "\n",
     "2. [Creating the Slurm Job on LEVANTE](#2-creating-the-slurm-job-on-levante)\n",
     "\n",
@@ -49,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Importing the slurm_job module"
+    "## 1. Importing the job module"
    ]
   },
   {
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### The `slurm_job` module contains the following function `squeue`, `slurm_job`, `max_resources_per_node`, `scancel`,  which allows us to create and operate the Slurm Job"
+    "##### The `job` module contains the following function `squeue`, `job`, `max_resources_per_node`, `scancel`,  which allows us to create and operate the Slurm Job"
    ]
   },
   {
@@ -66,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from slurm import  max_resources_per_node, squeue, slurm_job, scancel, output_dir"
+    "from aqua.slurm import slurm"
    ]
   },
   {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -106,13 +106,13 @@
       "#SBATCH --error=./slurm/logs/dask-worker-%j.err\n",
       "#SBATCH --output=./slurm/output/dask-worker-%j.out\n",
       "\n",
-      "/home/b/b382267/mambaforge/envs/tropical-rainfall/bin/python -m distributed.cli.dask_worker tcp://136.172.124.6:35899 --nthreads 1 --memory-limit 9.31GiB --name dummy-name --nanny --death-timeout 60\n",
+      "/home/b/b382267/mambaforge/envs/tropical-rainfall/bin/python -m distributed.cli.dask_worker tcp://136.172.124.6:36513 --nthreads 1 --memory-limit 9.31GiB --name dummy-name --nanny --death-timeout 60\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "slurm_job()"
+    "slurm.job()"
    ]
   },
   {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
      "output_type": "stream",
      "text": [
       "             JOBID PARTITION     NAME     USER ST       TIME  NODES NODELIST(REASON)\n",
-      "           4945327   compute dask-wor  b382267 PD       0:00      1 (Priority)\n"
+      "           4945818   compute dask-wor  b382267 PD       0:00      1 (Priority)\n"
      ]
     },
     {
@@ -142,13 +142,13 @@
        "0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "squeue()"
+    "slurm.squeue()"
    ]
   },
   {
@@ -169,11 +169,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#!/usr/bin/env bash\n",
+      "\n",
+      "#SBATCH -J dask-worker\n",
+      "#SBATCH -p interactive\n",
+      "#SBATCH -A bb1153\n",
+      "#SBATCH -n 1\n",
+      "#SBATCH --cpus-per-task=8\n",
+      "#SBATCH --mem=47G\n",
+      "#SBATCH -t 00:30:00\n",
+      "#SBATCH --error=./slurm/logs/dask-worker-%j.err\n",
+      "#SBATCH --output=./slurm/output/dask-worker-%j.out\n",
+      "\n",
+      "/home/b/b382267/mambaforge/envs/tropical-rainfall/bin/python -m distributed.cli.dask_worker tcp://136.172.124.6:38555 --nthreads 2 --nworkers 4 --memory-limit 11.64GiB --name dummy-name --nanny --death-timeout 60\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/b/b382267/mambaforge/envs/tropical-rainfall/lib/python3.10/site-packages/distributed/node.py:182: UserWarning: Port 8787 is already in use.\n",
+      "Perhaps you already have a cluster running?\n",
+      "Hosting the HTTP server on port 33613 instead\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
-    "slurm_job(cores=8, memory=\"50 GB\", queue = \"interactive\", walltime='00:30:00', jobs=1)"
+    "slurm.job(cores=8, memory=\"50 GB\", queue = \"interactive\", walltime='00:30:00', jobs=1)"
    ]
   },
   {
@@ -194,11 +225,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#!/usr/bin/env bash\n",
+      "\n",
+      "#SBATCH -J dask-worker\n",
+      "#SBATCH -p compute\n",
+      "#SBATCH -A bb1153\n",
+      "#SBATCH -n 1\n",
+      "#SBATCH --cpus-per-task=1\n",
+      "#SBATCH --mem=10G\n",
+      "#SBATCH -t 02:30:00\n",
+      "#SBATCH --error=./slurm/logs/dask-worker-%j.err\n",
+      "#SBATCH --output=./slurm/output/dask-worker-%j.out\n",
+      "#SBATCH --get-user-env\n",
+      "#SBATCH --exclusive\n",
+      "\n",
+      "/home/b/b382267/mambaforge/envs/tropical-rainfall/bin/python -m distributed.cli.dask_worker tcp://136.172.124.6:44791 --nthreads 1 --memory-limit 9.31GiB --name dummy-name --nanny --death-timeout 60\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/b/b382267/mambaforge/envs/tropical-rainfall/lib/python3.10/site-packages/distributed/node.py:182: UserWarning: Port 8787 is already in use.\n",
+      "Perhaps you already have a cluster running?\n",
+      "Hosting the HTTP server on port 36317 instead\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
-    "slurm_job(exclusive=True)"
+    "slurm.job(exclusive=True)"
    ]
   },
   {
@@ -219,11 +283,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#!/usr/bin/env bash\n",
+      "\n",
+      "#SBATCH -J dask-worker\n",
+      "#SBATCH -p interactive\n",
+      "#SBATCH -A bb1153\n",
+      "#SBATCH -n 1\n",
+      "#SBATCH --cpus-per-task=256\n",
+      "#SBATCH --mem=466G\n",
+      "#SBATCH -t 12:00:00\n",
+      "#SBATCH --error=./slurm/logs/dask-worker-%j.err\n",
+      "#SBATCH --output=./slurm/output/dask-worker-%j.out\n",
+      "#SBATCH --get-user-env\n",
+      "#SBATCH --exclusive\n",
+      "\n",
+      "/home/b/b382267/mambaforge/envs/tropical-rainfall/bin/python -m distributed.cli.dask_worker tcp://136.172.124.6:40937 --nthreads 16 --nworkers 16 --memory-limit 29.10GiB --name dummy-name --nanny --death-timeout 60\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/b/b382267/mambaforge/envs/tropical-rainfall/lib/python3.10/site-packages/distributed/node.py:182: UserWarning: Port 8787 is already in use.\n",
+      "Perhaps you already have a cluster running?\n",
+      "Hosting the HTTP server on port 45391 instead\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
-    "slurm_job(exclusive=True, cores=256, memory=\"500 GB\", queue = \"interactive\", walltime='12:00:00', jobs=1)"
+    "slurm.job(exclusive=True, cores=256, memory=\"500 GB\", queue = \"interactive\", walltime='12:00:00', jobs=1)"
    ]
   },
   {
@@ -244,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -263,13 +360,23 @@
       "#SBATCH --error=./slurm/logs/dask-worker-%j.err\n",
       "#SBATCH --output=./slurm/output/dask-worker-%j.out\n",
       "\n",
-      "/home/b/b382267/mambaforge/envs/tropical-rainfall/bin/python -m distributed.cli.dask_worker tcp://136.172.124.6:45169 --nthreads 16 --nworkers 16 --memory-limit 14.63GiB --name dummy-name --nanny --death-timeout 60\n",
+      "/home/b/b382267/mambaforge/envs/tropical-rainfall/bin/python -m distributed.cli.dask_worker tcp://136.172.124.6:46699 --nthreads 16 --nworkers 16 --memory-limit 14.63GiB --name dummy-name --nanny --death-timeout 60\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/b/b382267/mambaforge/envs/tropical-rainfall/lib/python3.10/site-packages/distributed/node.py:182: UserWarning: Port 8787 is already in use.\n",
+      "Perhaps you already have a cluster running?\n",
+      "Hosting the HTTP server on port 46313 instead\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
    "source": [
-    "slurm_job(max_resources=True)"
+    "slurm.job(max_resources=True)"
    ]
   },
   {
@@ -302,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -311,18 +418,18 @@
        "('251.3671875 GB', '8:00:00', '256', '8', '16', '2')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "max_resources_per_node('compute')"
+    "slurm.max_resources_per_node('compute')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -331,13 +438,13 @@
        "('502.9296875 GB', '12:00:00', '256', '8', '16', '2')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "max_resources_per_node('interactive')"
+    "slurm.max_resources_per_node('interactive')"
    ]
   },
   {
@@ -374,7 +481,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "slurm_job(path_to_output='/any/path/you/want')"
+    "slurm.job(path_to_output='/any/path/you/want')"
    ]
   },
   {
@@ -390,7 +497,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### You need to change the project name if you want to create the Slurm Job on Lumi with the function `slurm_job.` Currently, it  is `account=\"bb1153\"`"
+    "##### You need to change the project name if you want to create the Slurm Job on Lumi with the function `job.` Currently, it  is `account=\"bb1153\"`"
    ]
   },
   {
@@ -399,7 +506,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "slurm_job(account=='Your_Lumi_account_name')"
+    "slurm.job(account=='Your_Lumi_account_name')"
    ]
   },
   {
@@ -420,11 +527,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "scancel()"
+    "slurm.scancel()"
    ]
   },
   {
@@ -450,7 +557,7 @@
    "outputs": [],
    "source": [
     "Job_ID = 4929434\n",
-    "scancel(Job_ID)"
+    "slurm.scancel(Job_ID)"
    ]
   },
   {
@@ -463,15 +570,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "             JOBID PARTITION     NAME     USER ST       TIME  NODES NODELIST(REASON)\n",
-      "           4945492   compute dask-wor  b382267  R       0:08      1 l40358\n"
+      "             JOBID PARTITION     NAME     USER ST       TIME  NODES NODELIST(REASON)\n"
      ]
     },
     {
@@ -480,14 +586,21 @@
        "0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "squeue()"
+    "slurm.squeue()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
