added notebook demo

--- a/notebooks/reader/datasets.ipynb
+++ b/notebooks/reader/datasets.ipynb
@@ -9757,6 +9757,31 @@
     "global_mean = reader.fldmean(data.t2m)\n",
     "global_mean.plot()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### OSI-SAF sea-ice concentration data "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from aqua import Reader\n",
+    "reader = Reader(model=\"OSI-SAF\", exp=\"osi-450\", source=\"sh\", areas=False)\n",
+    "data = reader.retrieve(fix=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -9775,7 +9800,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
