modified:   basin-T_S-means-inter.ipynb 	modified:   global-means-interp.ipynb

--- a/diagnostics/global-ocean-diagnostics/basin-T_S-means-inter.ipynb
+++ b/diagnostics/global-ocean-diagnostics/basin-T_S-means-inter.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# We are not looking at scientific validity in the data now. \n",
     "# AQUA reader. One note: regrider is not working for 3d variables\n",
     "reader = Reader(model = 'FESOM', exp = 'tco3999-ng5', source=\"interpolated_global_TS\") \n",
     "data = reader.retrieve()\n",
