now using daily and monthly for averaging

--- a/notebooks/reader/timmean.ipynb
+++ b/notebooks/reader/timmean.ipynb
@@ -27,6 +27,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -6705,7 +6706,7 @@
     }
    ],
    "source": [
-    "reader = Reader(model=\"IFS\", exp=\"tco2559-ng5\", source=\"ICMGG_atm2d\", freq='day', regrid=\"r100\")\n",
+    "reader = Reader(model=\"IFS\", exp=\"tco2559-ng5\", source=\"ICMGG_atm2d\", freq='daily', regrid=\"r100\")\n",
     "data = reader.retrieve(fix=False)\n",
     "data"
    ]
@@ -7340,6 +7341,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -14570,7 +14572,7 @@
     }
    ],
    "source": [
-    "reader = Reader(model=\"IFS\", exp=\"tco2559-ng5\", source=\"ICMGG_atm2d\", freq='day')\n",
+    "reader = Reader(model=\"IFS\", exp=\"tco2559-ng5\", source=\"ICMGG_atm2d\", freq='daily')\n",
     "data = reader.retrieve(fix=False, timmean=True)\n",
     "data"
    ]
