modified:   global-ocean-diagnostics/basin-T_S-means-inter.ipynb 	modified:   global-ocean-diagnostics/global-means-interp.ipynb 	modified:   ocean-circulation-diagnostics/stratification-plots.ipynb

--- a/diagnostics/global-ocean-diagnostics/basin-T_S-means-inter.ipynb
+++ b/diagnostics/global-ocean-diagnostics/basin-T_S-means-inter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,29 +10,16 @@
     "import datetime\n",
     "import xarray as xr\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "cat = catalogue()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'xr' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mxr\u001b[49m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'xr' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "xr"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
