--- a/diagnostics/ocean-circulation-diagnostics/stratification-plots.ipynb
+++ b/diagnostics/ocean-circulation-diagnostics/stratification-plots.ipynb
@@ -6,11 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from aqua import Reader,catalogue, inspect_catalogue\n",
     "import datetime\n",
-    "import matplotlib.pyplot as plt\n",
-    "from aqua import Reader\n",
     "import xarray as xr\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "cat = catalogue()"
    ]
   },
   {
