--- a/diagnostics/global-ocean-diagnostics/global-means-interp.ipynb
+++ b/diagnostics/global-ocean-diagnostics/global-means-interp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -12,7 +12,8 @@
     "import datetime\n",
     "import xarray as xr\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "cat = catalogue()"
    ]
   },
   {
