modified:   global-ocean-diagnostics/basin-T_S-means-inter.ipynb

--- a/diagnostics/global-ocean-diagnostics/basin-T_S-means-inter.ipynb
+++ b/diagnostics/global-ocean-diagnostics/basin-T_S-means-inter.ipynb
@@ -15,6 +15,23 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "# Just to see the Catalogue \n",
+    "\n",
+    "print(inspect_catalogue(cat))\n",
+    "model_name='FESOM'\n",
+    "print(inspect_catalogue(cat, model = model_name))\n",
+    "exp_name= 'tco2559-ng5'\n",
+    "print(inspect_catalogue(cat, model = model_name, exp = exp_name))\n",
+    "source= 'interpolated_global_TS'\n",
+    "reader = Reader(model = model_name, exp = exp_name, source=source) \n",
+    "data = reader.retrieve()\n",
+    "data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -23,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,16 +118,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x7f6c9cf02dd0>"
+       "<matplotlib.collections.QuadMesh at 0x7fcc201b5cf0>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     },
