--- a/test_gsv.ipynb
+++ b/test_gsv.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1255,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1907,7 +1907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1917,6 +1917,15 @@
     "    for date in date_list:\n",
     "        request[\"date\"] = date\n",
     "        yield gsv.request_data(request)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gen = gsv_generator(gsv, request, '20000101', '20000103')"
    ]
   },
   {
@@ -2764,7 +2773,9 @@
    "source": [
     "def gsv_generator_step(gsv, request, start, end):\n",
     "    \"\"\"Return GSV request as a generator from a date list one step at a time\"\"\"\n",
-    "    timlist = ['0000','0100','0200','0300','0400','0500','0600','0700','0800','0900','1000','1100','1200','1300','1400','1500','1600','1700','1800','1900','2000','2100','2200','2300']\n",
+    "    timlist = ['0000','0100','0200','0300','0400','0500','0600','0700','0800',\n",
+    "               '0900','1000','1100','1200','1300','1400','1500','1600','1700',\n",
+    "               '1800','1900','2000','2100','2200','2300']\n",
     "    date_list= make_date_list(start, end, step='D')\n",
     "    for date in date_list:\n",
     "        request[\"date\"] = date\n",
@@ -3096,6 +3107,58 @@
    "source": [
     "ds = next(datar)\n",
     "ds['2t'].plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "from gsv import requests\n",
+    "\n",
+    "def gsv_generator(gsv, request, start, end):\n",
+    "    \"\"\"Return GSV request as a generator from a date list\"\"\"\n",
+    "    date_list= make_date_list(start, end, step='D')\n",
+    "    for date in date_list:\n",
+    "        request[\"date\"] = date\n",
+    "\n",
+    "        req = requests.parse_request(request)\n",
+    "\n",
+    "        ds = gsv.request_data(request)\n",
+    "        if not ds:\n",
+    "            print(f\"Date {date} not found, waiting ...\")\n",
+    "        while not ds:\n",
+    "            time.sleep(1)\n",
+    "            it=list(gsv._list(req))\n",
+    "            if len(it):\n",
+    "                print(it)\n",
+    "                ds = gsv.request_data(request)\n",
+    "        yield ds\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "request = { \n",
+    "    'class': 'ea',\n",
+    "    'domain': 'g',\n",
+    "    'type': 'an',\n",
+    "    'stream': 'oper',\n",
+    "    'date': '20000301',\n",
+    "    'time': [ '0000','0100','0200','0300','0400','0500','0600','0700','0800','0900','1000','1100','1200','1300','1400','1500','1600','1700','1800','1900','2000','2100','2200','2300'],\n",
+    "    'levtype': 'sfc',\n",
+    "    'step': 0,\n",
+    "    'param': '167',\n",
+    "    'expver': '0001',\n",
+    "}\n",
+    "gen = gsv_generator(gsv, request, '20101231', '20110102')\n",
+    "gen\n"
    ]
   }
  ],
