from catalogdir to configdir

--- a/notebooks/gribber/gribber.ipynb
+++ b/notebooks/gribber/gribber.ipynb
@@ -33,7 +33,7 @@
     "    - `datadir`: data directory \n",
     "    - `tmpdir`: temporary directory \n",
     "    - `jsondir`: JSON directory \n",
-    "    - `catalogdir`: catalog directory\n",
+    "    - `configdir`: configuration directory\n",
     "- `verbose`: print help message (default: `False`)\n",
     "- `nprocs`: number of processors (default: `1`)\n",
     "- `replace`: replace existing files (default: `False`)\n",
