--- a/notebooks/lra_generator/lra_generator.ipynb
+++ b/notebooks/lra_generator/lra_generator.ipynb
@@ -7,7 +7,8 @@
    "source": [
     "# The LRA generator class\n",
     "\n",
-    "This is a basic notebook to show how the LRA generator is built. Please note that this is a very memory and computing intensive operation and it is recommended to use the command line interface (CLI) - the `cli_lra_generator.py` for doing any of the following operations"
+    "This is a basic notebook to show how the LRA generator is built.\n",
+    "Please note that this is a very intensive operation in terms of time and memory. It is recommended to use the command line interface (CLI) - the `cli_lra_generator.py` for doing any of the following operations."
    ]
   },
   {
@@ -45,7 +46,7 @@
    "metadata": {},
    "source": [
     "## A dry run\n",
-    "Initilize the class, and retrieve the data. We are asking to go to `r100` at monthly frequency. No data will be produced, but we check that everything is in place! Therefore we use `info` as loglevel to output all we need..."
+    "Initilize the class and retrieve the data. We are asking to go to a grid `r100` at monthly frequency. No data will be produced, we just check that everything is in place! Therefore we use `info` as loglevel to output all we need."
    ]
   },
   {
@@ -198,7 +199,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Initialize the LRA class, but setting `definitive` as true to create the actual data. Frequency is `daily` in this case"
+    "Initialize the LRA class, but setting `definitive` as true to create the actual data. Frequency is `daily` in this case."
    ]
   },
   {
@@ -224,7 +225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Retrieve the required data: they are stored in the `data` object"
+    "Retrieve the required data: they are stored in the `data` object."
    ]
   },
   {
@@ -7463,7 +7464,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is also an option to create an entry in the catalog (`.create_catalog_entry()`), but to avoid complication and to mess up with the original catalog this is not used here. To inspect the output produced, we just use xarray"
+    "There is also an option to create an entry in the catalog (`.create_catalog_entry()`), but to avoid complication and to mess up with the original catalog this is not used here. To inspect the output produced, we just use xarray:"
    ]
   },
   {
@@ -7923,7 +7924,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This can be plotted, showing daily values of precipitation"
+    "From this file we can plot, for example, daily values of precipitation:"
    ]
   },
   {
