--- a/notebooks/lra_generator/opa_generator.ipynb
+++ b/notebooks/lra_generator/opa_generator.ipynb
@@ -64,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then you can retrieve the data using the `Reader`. This is based on a streaming generator so far since we are using data from NextGEMS, will be later replaced with direct access from `FDB`. It also gave a look at the data so that it can infer the timedelta"
+    "Then you can retrieve the data using the `Reader`. This is based on a streaming generator so far, since we are using data from NextGEMS. It will be later replaced with direct access from `FDB`. It also gives a look at the data so that it can infer the timedelta"
    ]
   },
   {
@@ -141,8 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This will launch the OPA computation, if the `definitive` flag is `true` it will take ages and probably break the notebook. Otherwise print only the sequential access to the data from the `Reader`.\n",
-    "Note that to print the sequential access the loglevel should be set to `INFO` or `DEBUG`."
+    "This will launch the OPA computation, if the `definitive` flag is `true` it will take ages and probably break the notebook. Here, we only print the sequential access to the data from the `Reader` (note that to print the sequential access the loglevel should be set to `INFO` or `DEBUG`)."
    ]
   },
   {
@@ -321,7 +320,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to really access and work with data a run with `definitive` set to `True` is needed."
+    "Remember that in order to really access and work with data, a run with `definitive` set to `True` is needed."
    ]
   },
   {
@@ -329,7 +328,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This remove the entries (and in the future also the files), once all the computation have been safely concluded"
+    "The following command removes the entries (and in the future also the files), once all the computation have been safely concluded"
    ]
   },
   {
